--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>mujava</groupId>
     <artifactId>mujava</artifactId>
-    <version>4.0.0</version>
+    <version>4.0.1-build.6</version>
 
     <repositories>
         <repository>
